[gd_scene load_steps=12 format=3 uid="uid://cfjjdskud8l4g"]

[ext_resource type="Texture2D" uid="uid://cj0xexfo835ls" path="res://textures/dust_bunny.png" id="1_xfs3y"]
[ext_resource type="Script" uid="uid://d0p62aakdh4lt" path="res://scenes/characters/dust_bunny.gd" id="2_lg7n7"]
[ext_resource type="PackedScene" uid="uid://drvgkns1v81b2" path="res://addons/simple_health_bar/health_bar.tscn" id="3_lsnwy"]

[sub_resource type="Animation" id="Animation_lg7n7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xfs3y"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_lsnwy"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.401399, 0.501399, 0.601399, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fqins"]
_data = {
&"RESET": SubResource("Animation_lg7n7"),
&"idle": SubResource("Animation_xfs3y"),
&"walk": SubResource("Animation_lsnwy")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lg7n7"]
radius = 35.8589
height = 71.7178

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lsnwy"]
radius = 33.801
height = 67.6021

[sub_resource type="CircleShape2D" id="CircleShape2D_lsnwy"]
radius = 5.38516

[sub_resource type="CircleShape2D" id="CircleShape2D_lg7n7"]
radius = 430.512

[node name="DustBunny" type="CharacterBody2D" groups=["bunny"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("2_lg7n7")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(1, -31)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_xfs3y")
hframes = 4
vframes = 3
region_enabled = true
region_rect = Rect2(39, 2, 947, 921)

[node name="anims" type="AnimationPlayer" parent="."]
root_node = NodePath("../sprite")
libraries = {
&"": SubResource("AnimationLibrary_fqins")
}

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(2, -25)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lg7n7")
metadata/_edit_lock_ = true

[node name="hurtbox" type="Area2D" parent="." groups=["enemy_contact_hurtboxes"]]
position = Vector2(2, -25)
scale = Vector2(1.28, 1.28)
collision_layer = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="col" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CapsuleShape2D_lsnwy")

[node name="latchcircle" type="Area2D" parent="."]
position = Vector2(24, -5)
collision_layer = 2
collision_mask = 4
metadata/_edit_group_ = true

[node name="LatchRadius" type="CollisionShape2D" parent="latchcircle"]
shape = SubResource("CircleShape2D_lsnwy")
debug_color = Color(0.859382, 0.362978, 1.92523e-07, 0.42)

[node name="sightcircle" type="Area2D" parent="."]
position = Vector2(0, -25)
collision_layer = 2
collision_mask = 4
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="ChaseRadius" type="CollisionShape2D" parent="sightcircle"]
shape = SubResource("CircleShape2D_lg7n7")
debug_color = Color(0.666667, 0.345098, 0.101961, 0.113725)

[node name="LatchDamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HealthBar" parent="." instance=ExtResource("3_lsnwy")]
offset_left = -16.0
offset_top = 14.0
offset_right = 65.0
offset_bottom = 29.0
scale = Vector2(0.433479, 0.474507)
value = 64.85

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="latchcircle" to="." method="_on_latchcircle_area_entered"]
[connection signal="area_entered" from="sightcircle" to="." method="_on_sightbox_area_entered"]
[connection signal="timeout" from="LatchDamageTimer" to="." method="_on_latch_damage_timer_timeout"]
